新建面试合集

--- a/docs/06.收藏夹/02.常用的前端轮子.md
+++ b/docs/06.收藏夹/02.常用的前端轮子.md
@@ -9,7 +9,7 @@ author:
 ---
 
 ## React UI 组件库
-- [Ant Design](https://ant.design/)
+- [Ant Design](https://ant.design/index-cn)
 - [React Bootstrap](https://react-bootstrap.github.io/)
 - [MATERIAL-UI](https://material-ui.com/)
 
