--- a/docs/03.技术/04.博客搭建/01.解决百度无法收录搭建在GitHub上的个人博客的问题.md
+++ b/docs/03.技术/04.博客搭建/01.解决百度无法收录搭建在GitHub上的个人博客的问题.md
@@ -50,7 +50,7 @@ npm run build
 cd docs/.vuepress/dist
 
 # github
-echo 'b.serendipity0321.com' > CNAME
+echo '.serendipity0321.com' > CNAME
 git init
 git add -A
 git commit -m 'deploy'
